--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ go:
   - tip
 
 install:
-  - go get -v -t ./...
+  - go get -v -t $(go list ./... | grep -v vendor)
 
 script:
   - go test -v $(go list ./... | grep -v vendor)
